--- a/.github/workflows/build-release-vc.yml
+++ b/.github/workflows/build-release-vc.yml
@@ -48,7 +48,7 @@ jobs:
         shell: bash
         run: |
           Prog_version=${{ env.Prog_Version}}
-          Prod_version=$(grep PRODUCTVERSION "src/vdub/res/vdub.rc") | awk "{ print $2}" | tr "," ".")
+          Prod_version=$(grep PRODUCTVERSION "src/vdub/res/vdub.rc" | awk "{ print $2}" | tr "," ".")
           echo "VERSION=$Prod_version" >> $GITHUB_ENV
 
       - name: Print program version
