--- a/.github/workflows/build-release-vc.yml
+++ b/.github/workflows/build-release-vc.yml
@@ -58,7 +58,7 @@ jobs:
         shell: bash
         run: |
           echo "Print program version"
-          echo "Version:${{ env.VERSION }}"
+          echo "Version:[${{ env.VERSION }}]"
 
       - name: Set MSVC environment
         uses: deep-soft/msvc-dev-cmd@v1
@@ -74,7 +74,7 @@ jobs:
 #         working-directory: _build/vc/_output/product/${{ matrix.build_config }}.${{ matrix.platform_sln }}
 #         run: |
 #           dir ./
-#           Compress-Archive . ../VirtualDUB.${{ matrix.build_config }}.${{ matrix.platform_sln }}.${{ env.VERSION }}.zip
+#           Compress-Archive . ../${{env.PROG_NAME}}.${{ matrix.build_config }}.${{ matrix.platform_sln }}.${{ env.VERSION }}.zip
 #           dir ../
 
       - name: Sign Windows exe and dll files
@@ -92,32 +92,32 @@ jobs:
         uses: deep-soft/zip-release@v2
         with:
           type: 'zip'
-          filename: 'VirtualDUB.${{ matrix.build_config }}.${{ matrix.platform_sln }}.${{ env.VERSION }}.zip'
+          filename: '${{env.PROG_NAME}}.${{ matrix.build_config }}.${{ matrix.platform_sln }}.${{ env.VERSION }}.zip'
           directory: 'src/out/${{ matrix.build_config }}.${{ matrix.platform_sln }}'
           exclusions: '*.map *.pdb'
-          recursive_exclusions: '*.map *.pdb changelog *Bel.lng *Cze.lng *Ger.lng *Hun.lng *Ita.lng *Lit.lng *Pol.lng *Rus.lng *Sky.lng *Spa.lng *Ukr* *Bel.hlf *Cze.hlf *Ger.hlf *Hun.hlf *Ita.hlf *Lit.hlf *Pol.hlf *Rus.hlf *Sky.hlf *Spa.hlf *Ukr*'
+          recursive_exclusions: '*.map *.pdb changelog'
           path: '.'
 
       - name: Upload zip
         continue-on-error: true
         uses: deep-soft/upload-artifact@main
         with:
-          name: VirtualDUB.${{ matrix.build_config }}.${{ matrix.platform_name }}.${{ env.VERSION }}.zip
-          #path: _build/vc/_output/product/${{ matrix.build_config }}.${{ matrix.platform_sln }}/VirtualDUB.${{ matrix.build_config }}.${{ matrix.platform_sln }}.${{ env.VERSION }}.zip
+          name: ${{env.PROG_NAME}}.${{ matrix.build_config }}.${{ matrix.platform_name }}.${{ env.VERSION }}.zip
+          #path: _build/vc/_output/product/${{ matrix.build_config }}.${{ matrix.platform_sln }}/${{env.PROG_NAME}}.${{ matrix.build_config }}.${{ matrix.platform_sln }}.${{ env.VERSION }}.zip
           path: ${{ env.ZIP_RELEASE_ARCHIVE }}
 
 #      - name: Upload folder
 #        continue-on-error: true
 #        uses: deep-soft/upload-artifact@main
 #        with:
-#          name: VirtualDUB.${{ matrix.build_config }}.${{ matrix.platform_name }}
+#          name: ${{env.PROG_NAME}}.${{ matrix.build_config }}.${{ matrix.platform_name }}
 #          path: _build/vc/_output/product/${{ matrix.build_config }}.${{ matrix.platform_sln }}
 
 #      - name: Create list file
 #        continue-on-error: true
 #        shell: bash
 #        run: |
-#          list_file="VirtualDUB.${{ matrix.build }}-${{ matrix.compiler }}-${{ matrix.arch }}-${{ matrix.platform_sln }}-${{ matrix.platform_name }}-${{ matrix.build_config }}.txt"
+#          list_file="${{env.PROG_NAME}}.${{ matrix.build }}-${{ matrix.compiler }}-${{ matrix.arch }}-${{ matrix.platform_sln }}-${{ matrix.platform_name }}-${{ matrix.build_config }}.txt"
 #          ls -lR > $list_file
 #          echo "LIST_File=$list_file" >> $GITHUB_ENV
 
